# Equivalence_Checker

./: Cargo.toml
output/: abs_val_report.html  abs_val_report.json  add_report.html  add_report.json  bitops_report.html  bitops_report.json  categorize_report.html  categorize_report.json  clamp_report.html  clamp_report.json  classify_report.html  classify_report.json  compute_report.html  compute_report.json  count_even_report.html  count_even_report.json  f_report.html  f_report.json  factorial_report.html  factorial_report.json  grade_report.html  grade_report.json  in_range_report.html  in_range_report.json  linear_search_report.html  linear_search_report.json  max_report.html  max_report.json  sum_to_n_report.html  sum_to_n_report.json
output/ir/: abs_val_c_harness.ll  abs_val_c_normalized.ll  abs_val_rust_harness.ll  abs_val_rust_normalized.ll  add_c_harness.ll  add_c_normalized.ll  add_rust_harness.ll  add_rust_normalized.ll  bitops_c_harness.ll  bitops_c_normalized.ll  bitops_rust_harness.ll  bitops_rust_normalized.ll  categorize_c_harness.ll  categorize_c_normalized.ll  categorize_rust_harness.ll  categorize_rust_normalized.ll  clamp_c_harness.ll  clamp_c_normalized.ll  clamp_rust_harness.ll  clamp_rust_normalized.ll  classify_c_harness.ll  classify_c_normalized.ll  classify_rust_harness.ll  classify_rust_normalized.ll  compute_c_harness.ll  compute_c_normalized.ll  compute_rust_harness.ll  compute_rust_normalized.ll  count_even_c_harness.ll  count_even_c_normalized.ll  count_even_rust_harness.ll  count_even_rust_normalized.ll  f_c_harness.ll  f_c_normalized.ll  f_rust_harness.ll  f_rust_normalized.ll  factorial_c_harness.ll  factorial_c_normalized.ll  factorial_rust_harness.ll  factorial_rust_normalized.ll  (+20 more)
src/: main.rs
src/compiler/: mod.rs
src/diff/: mod.rs
src/equivalence/: mod.rs
src/instrumentor/: mod.rs
src/normalizer/: mod.rs
src/reporter/: mod.rs
static/: index.html
(+52 files in other folders)
