[package]
name = "equivalence_checker"
version = "0.1.0"
edition = "2021"
authors = ["Fathima A A"]
description = "LLVM-Based Cross-Language Semantic Equivalence Checker for C and Rust"

[[bin]]
name = "equivalence_checker"
path = "src/main.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Z3 SMT Solver bindings
z3 = { version = "0.12", features = ["static-link-z3"] }

# JSON handling (for reports and path summaries)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colored terminal output
colored = "2.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Rust validation
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

regex = "1.0"
rand = "0.8"

# ── Web UI server ──────────────────────────────────────
axum            = { version = "0.7", features = ["multipart"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["fs", "cors"] }
tempfile        = "3.8"

[dev-dependencies]
tempfile = "3.8"